<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".KingHall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/afff2"
                android:drawableLeft="@drawable/button_leaders"
                android:drawableRight="@drawable/button_leaders"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="KING HALL"
                android:textColor="@color/textColorBlack"
                android:textSize="26dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.4" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#7A552801"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_0" />

                    <TextView
                        android:id="@+id/ks0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op0"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_1" />

                    <TextView
                        android:id="@+id/ks1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op1"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_2" />

                    <TextView
                        android:id="@+id/ks2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op2"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_3" />

                    <TextView
                        android:id="@+id/ks3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op3"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_4" />

                    <TextView
                        android:id="@+id/ks4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op4"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_5" />

                    <TextView
                        android:id="@+id/ks5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op5"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/opponent_6" />

                    <TextView
                        android:id="@+id/ks6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/almendra"
                        android:text="@string/op6"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/buttonrecthigh_effect"
                    android:backgroundTint="@color/whiter"
                    android:backgroundTintMode="src_over"
                    android:drawableTop="@drawable/ic_home"
                    android:fontFamily="@font/almendra"
                    android:gravity="center|top"
                    android:text="HOME"
                    android:textSize="26dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/buttonrecthigh_effect"
                    android:backgroundTint="@color/whiter"
                    android:backgroundTintMode="src_over"
                    android:drawableTop="@drawable/ic_faq"
                    android:fontFamily="@font/almendra"
                    android:gravity="center|top"
                    android:text="HELP"
                    android:textAlignment="inherit"
                    android:textSize="26dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.9">

                <Button
                    android:id="@+id/button_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/buttonrecthigh_effect"
                    android:backgroundTint="@color/whiter"
                    android:backgroundTintMode="src_over"
                    android:drawableTop="@drawable/rewarded_king"
                    android:elevation="1dp"
                    android:fontFamily="@font/almendra"
                    android:gravity="center|top"
                    android:text="King Appear\nimmediately"
                    android:textSize="16dp"
                    android:translationZ="5.0dp" />

            </TableRow>

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>